<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/opcoesJogadores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mostrar_opcoes" />

    <LinearLayout
        android:id="@+id/selecinarOpcaoLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">
        <TextView
            android:id="@+id/txt_select_op"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selecione_numero_jogadores"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/opcaoRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/op_dois"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_2_jogadores"/>
            <RadioButton
                android:id="@+id/op_tres"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/_3_jogadores"/>
        </RadioGroup>

        <TextView
            android:id="@+id/txt_select_op_jogada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selecione_numero_jogos"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/opcaoRadioGroup2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/op_uma_jogada"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/_1_jogo"/>
            <RadioButton
                android:id="@+id/op_tres_jogada"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_3_jogos"/>
            <RadioButton
                android:id="@+id/op_cinco_jogada"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_5_jogos"/>
        </RadioGroup>
    </LinearLayout>

    <TextView
        android:id="@+id/lbl_escolha_jogador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/escolha_a_sua_jogada"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/jogadaLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/pedraBT"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:src="@mipmap/pedra"
            tools:ignore="SpeakableTextPresentCheck" />
        <ImageButton
            android:id="@+id/papelBT"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:src="@mipmap/papel"
            tools:ignore="SpeakableTextPresentCheck" />
        <ImageButton
            android:id="@+id/tesouraBT"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:src="@mipmap/tesoura"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

    <TextView
        android:id="@+id/labelJogadaComputador01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jogada_computador_01"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/jogadaComputador01Img"
        android:layout_width="match_parent"
        android:layout_height="64dp" />

    <TextView
        android:id="@+id/labelJogadaComputador02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jogada_computador_02"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/jogadaComputador02Img"
        android:layout_width="match_parent"
        android:layout_height="64dp" />

    <TextView
        android:id="@+id/labelResultadoTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resultado"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/resultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"/>

</LinearLayout>